// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Article Count test Render the authors article counts as expected for a UQ researcher) 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-direction-xs-column css-ylnelu-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-7fdskf-MuiGridLegacy-root"
    >
      313
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-1p1doxb-MuiGridLegacy-root"
    >
      eSpace works from
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-5oo9gd-MuiGridLegacy-root"
    >
      1975
      <span>
         to 
      </span>
      2018
    </div>
  </div>
</div>
`;

exports[`Dashboard Article Count test should not render anything if any data is missing 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-direction-xs-column css-ylnelu-MuiGridLegacy-root"
  />
</div>
`;
